@@ -441,13 +441,18 @@ are unchanged by the 2026-07-15 AOT work — consult the historical doc.*
     is pathologically slow — steady progress (fresh `AnnotationConfigApplicationContext` + HTTP server
     per test; watchdog stack dumps show active bean creation, no deadlock) yet does not finish within
     1800s (HotSpot: 13s). Needs a dedicated perf investigation.~~
-    **PARTIALLY FIXED (2026-07-15, commit `96c8a57f`, branch `fix/xerces-perf-20260715`)**: root-caused
-    and fixed a genuine, general CPU-dispatch bug (JDK-internal bytecode — including Xerces — never
-    consulted the interpreter's monomorphic invoke cache; see the detailed writeup further down in
-    this document, section 2, same bullet). Verified via an isolated repro: 2.7x-3.4x faster
-    per-parse. **Full-class wall-clock improvement on this specific test NOT confirmed** — see the
-    detailed entry below for the honest caveat (host-contention-confounded A/B comparison, and
-    evidence the per-test cost here is dominated by something other than the bug fixed).
+    **PARTIALLY FIXED across two rounds (2026-07-15, commits `4290124b`/`96c8a57f`/`b7a1ed84`, branch
+    `fix/xerces-perf-20260715`)**: root-caused and fixed 5 real, independently-verified bugs — a
+    missing invoke-cache consult for JDK-internal bytecode, two JIT-eligibility-check memoization
+    gaps, an unbounded per-native-call JIT-code-range resort, a SipHash-vs-FxHash hasher choice, and
+    an O(n) free-list byte recount inside the per-allocation `needs_gc` check. Each individually
+    verified (isolated repro speedups, `perf record` before/after, zero test regressions). **STILL
+    NOT sufficient to close the class-level gap**: live-profiling the real class after all 5 fixes
+    shows the true remaining bottleneck is CratonVM's conservative (non-precise) GC root scanning on
+    the interpreter's native-call path (`is_object_address` + `update_root_snapshot`, >60% of sampled
+    CPU) — an already-documented, deliberately-deferred architectural item (see `gc/src/arena.rs`'s
+    `Arena::reset` doc comment), not a quick-fix bug. Full detailed writeup, all numbers, and the
+    concrete next step further down in this document, section 2, same bullet.
 
 ## 4. Reactive cluster session 2026-07-15 (branch `fix/reactive-cluster-20260715`)
 
@@ -573,7 +578,7 @@ rule `uri_scheme_name_fail_index` already enforced for exceptions). The class is
     as worth the risk/complexity of touching more interpreter dispatch code for an expected marginal
     (not measurable-with-confidence) return.
 
-    **Current status**: `ClientHttpConnectorTests` is measurably, substantially more reliable after
+    ~~**Current status**: `ClientHttpConnectorTests` is measurably, substantially more reliable after
     the two rounds of fixes above (9/15 → 4/15 clean hang rate) but not fully closed. The remaining
     ~27% is consistent with the same "accumulated per-call interpreter dispatch/allocation overhead
     compounding on method-call-heavy code" conclusion the 2026-07-13
@@ -583,7 +588,19 @@ rule `uri_scheme_name_fail_index` already enforced for exceptions). The class is
     allocator throughput initiative (e.g. profiling `mimalloc` allocation-path cost under this
     object-churn pattern, or auditing the several distinct locks that showed up for reducible
     contention individually), not another single-function fix — out of scope for a "residual"
-    investigation.
+    investigation.~~ **2026-07-16 update (see section 5.3)**: the 27% hang rate is now resolved,
+    independently reconfirmed at **0/60** across three fresh stress batches (including a
+    deliberate 2x-concurrent-contention batch that the original 27% measurement never tested
+    against). A direct causal A/B experiment (reverting only the `Thread.getId()` fix on an
+    otherwise-current tip) confirms the diffuse contention/throughput cost this section describes
+    is real and `getId()`'s collapse is a genuine, measurable contributor to it (mean wall time
+    +10-25%, occasional runs crossing the historical 30s hang bound) — but `getId()` alone does not
+    reproduce anything close to the historical 27% rate; the resolution is the combined effect of
+    this session's several fixes (blocking-region gaps, `force_native_over_real_jdk_bytecode`
+    memoization, `Thread.getId()`, the executor-`submit()`/Netty-`Future` fix in 5.2), not any one
+    of them alone. The diffuse hashbrown/parking_lot/mimalloc/`Arc`/`Weak` cost pattern itself is
+    still visible in hot-thread sampling and remains a legitimate, still-open *performance*
+    characteristic — just no longer severe enough to cause an observed hang.
     Also unfixed: the T19.H1 watchdog stack-dump itself SIGSEGVs when JIT frames are on the stack
     (separate small bug; `--nojit` dumps work).
 *   ~~`web.reactive.result.method.annotation.RequestMappingMessageConversionIntegrationTests` —
@@ -645,24 +662,392 @@ rule `uri_scheme_name_fail_index` already enforced for exceptions). The class is
     be a debug build" — an artifact of running `cargo test --release`, unrelated to this change) /
     111 ignored.
 
-    **Full-class wall-clock impact: NOT confirmed, OPEN follow-up**. A same-day A/B run of the full
-    160-test class (fixed vs. pre-fix binary, bounded ~10-minute windows, same shared build host) was
-    inconclusive: the fixed binary averaged ~49.7s/test vs. ~40.9s/test pre-fix in that particular
-    window — but the host had a load average of 5-6 on 16 cores with a *different concurrent
-    session's* Spring suite run consuming 169% CPU at the time, so this specific comparison is not
-    trustworthy in either direction and should not be read as "the fix made this test slower." More
-    significant than the noise: per-test wall time in both runs was ~40-55 SECONDS — two to three
-    orders of magnitude larger than what the isolated repro's few-hundred-ms Xerces parse cost could
-    plausibly explain per test — meaning this specific integration test's dominant per-test cost is
-    something else entirely (each test builds a fresh embedded Tomcat/Reactor instance: real socket
-    bind, NIO connector startup, thread-pool bootstrap), not the CPU-bound bytecode-dispatch overhead
-    this fix targets. **This means the fix is real, general, and verified, but is not sufficient on
-    its own to bring `RequestMappingMessageConversionIntegrationTests` down to a small multiple of
-    HotSpot's 13s.** The next step for that specific goal is a separate investigation into what
-    dominates per-test wall-clock time in this class — likely embedded-server bootstrap/socket/
-    thread costs — ideally run on an uncontended host to get a clean baseline.
-*   ~~`web.reactive.result.view.script.JRubyScriptTemplateTests`~~ **PARTIALLY FIXED
-    (2026-07-15) -- 2 of (at least) 3 chained bugs closed, test class still FAILS.** JRuby's own
+    **Full-class wall-clock impact after round 1: NOT confirmed** — the round-1 A/B comparison
+    above was inconclusive (host contention), but its qualitative observation was right: per-test
+    wall time (~40-55s) was far larger than the Xerces-repro cost could explain, meaning something
+    else dominated. Investigated further same-day, round 2 (2026-07-15, commit `b7a1ed84`, same
+    branch):
+
+    **Repro correction first**: the original standalone bootstrap repro (`BootstrapRepro.java`) had
+    no package declaration, so its `@ComponentScan` scanned the entire classpath root recursively —
+    an unrealistic worst case. The real test's `WebConfig` is properly packaged
+    (`org.springframework.web.reactive.result.method.annotation`), scoping its scan to one package.
+    A corrected, properly-packaged repro (`BootstrapRepro2.java`, package
+    `com.example.bootstraprepro`) dropped HotSpot's steady-state `ctx_ms` from ~90-140ms to
+    ~20-32ms — the original repro was measuring an artificial worst case, not the real per-test cost.
+    This mistake cost real investigation time; flagging the lesson (fair repro scope matters as much
+    as the fix) for future sessions chasing this class of bug.
+
+    **Three further, independent, verified fixes** found via `perf record` (both on the isolated
+    repro and, critically, `perf record -p <pid>` attached LIVE to an in-progress real-class run —
+    the isolated repro's profile shape and the real class's profile shape turned out to be quite
+    different, so both were needed) plus live gdb stack sampling:
+
+    1. `jit/src/lib.rs` (`snapshot_code_ranges_into`): the per-native-call JIT-code-range snapshot
+       used by `native_stack_has_jit_frame` (`vm/src/jit/conservative_roots.rs`) was rebuilt (full
+       lock + Vec copy + `sort_unstable()` over every registered range) on EVERY call despite being
+       cached in a thread-local buffer — a write-only "cache". Since registered ranges only grow
+       over a process's life (compiled code is retained), and round 1's own fix made more JDK-class
+       code tier up to JIT, this was an O(n log n) cost per native call that grew across a session —
+       directly visible as `ctx_ms` climbing 14.8s→26.2s across BootstrapRepro iterations sharing one
+       process, and `perf record` showing 7.19% self-time in a deeply-recursive `quicksort`. Fixed
+       with a generation counter, bumped only on actual add/remove, gating the resnapshot/resort.
+    2. `vm/src/runtime/local_liveness.rs` (`live_locals_mask`): used `std::collections::HashMap`'s
+       default SipHash hasher instead of this codebase's usual `FxHashMap` for its (also
+       per-native-call) code-blob cache and per-pc liveness table. Pure hasher swap.
+    3. `gc/src/arena.rs` (`Arena::free_list_bytes`): summed both free-list tiers from scratch on
+       every call; its only caller, `GenerationalHeap::needs_gc`, runs on every allocation attempt.
+       Live-profiling an ACTUAL `RequestMappingMessageConversionIntegrationTests` run in progress
+       found `needs_gc` alone at **24.5% of all sampled CPU time**. Fixed with the same
+       generation-counter-cache shape as #1. Verified with a second live-attached `perf record`:
+       `needs_gc` dropped 24.5%→7.2% of sampled CPU with no other symbol regressing.
+
+    All three: `cargo test -p cratonvm-gc --lib` 787/0 and `cargo test -p cratonvm-vm --lib`
+    2203/9(pre-existing debug-only)/111 unchanged (no regressions).
+
+    **Class-level result: still NOT resolved.** A live-attached `perf record` on the real class
+    AFTER all three round-2 fixes shows the true remaining bottleneck clearly: with `needs_gc` fixed,
+    `GenerationalHeap::is_object_address` (28.7% direct + 10.1% via its `VmHeap` wrapper ≈ **38.7%**)
+    and `update_root_snapshot` (22.2%) now dominate — together over 60% of sampled CPU, i.e. the SAME
+    conservative-GC-root-scanning family as the fixes above, but the piece of it that ISN'T a bug: on
+    every object-returning native call, CratonVM's conservative (non-precise) collector validates
+    every 8-byte-aligned candidate word in the scanned native-stack/frame regions against
+    `is_object_address` (alignment + region-bounds + header-tag-plausibility checks) because it has
+    no precise stack map for that call site. This is explicitly documented, pre-existing, deliberately
+    deferred architecture — see the doc comment on `Arena::reset` in `gc/src/arena.rs`: *"the
+    audit-flagged 'perf bug' is a real cost, but the correctness hazard outweighs it... until
+    `is_object_address` is tightened to honour the cursor bound"* / *"when the GC switches to precise
+    stack maps"* — not a quick-fix bug. Confirmed empirically: a full-class run with all 3 round-2
+    fixes reached the same ~29 Tomcat-backend tests in a 1200s bound as the pre-round-2 binary — a
+    real, individually-verified reduction in one contributor (`needs_gc`) did not move the class-level
+    wall clock outside measurement noise, because the now-larger `is_object_address` /
+    `update_root_snapshot` contributor was untouched.
+
+    **Honest summary across both rounds**: 5 real, independently-verified CPU-dispatch and
+    GC-bookkeeping bugs found and fixed (commits `4290124b`, `96c8a57f`, `b7a1ed84`), each with clean
+    before/after measurements and no regressions. `RequestMappingMessageConversionIntegrationTests`
+    still does not complete in a reasonable multiple of HotSpot's 13s. The remaining, now
+    clearly-identified bottleneck is architectural: CratonVM's conservative (stack-map-free) GC root
+    scanning on the interpreter's native-call path. Closing that gap requires precise stack maps for
+    that specific scan path (the project has PARTIAL precise-map coverage already — see the
+    precise-jit-maps roadmap items — but apparently not for this native-call conservative-scan site),
+    which is a substantially larger effort than a bug-fix session: expect a dedicated investigation,
+    not a quick follow-up.
+
+    **Round 3 (2026-07-16): heap-corruption false alarm investigated and closed — `b7a1ed84`
+    exonerated with direct A/B evidence; two SEPARATE real bugs found instead.** An independent
+    verification pass reported the class failing to complete within 1200s with continuous
+    "implausible object size" / corrupted-header non-moving-sweep warnings, and named `b7a1ed84`'s
+    `Arena::free_list_bytes()` epoch-cache (round 2, fix #3 above) as the prime suspect. Investigated
+    with full rigor on a fresh worktree + fresh build at the then-current `dev` tip (`1f8e398e`):
+
+    - **Code audit of the epoch-cache found no plausible corruption mechanism.** Every mutation site
+      to the arena's free lists (`push_block_routed`; the `alloc()` free-list-hit branch; all 3
+      list-clearing paths) bumps the generation counter — re-verified line-by-line against the exact
+      committed diff. `Arena` is exclusively accessed through a `Mutex` in every backend that uses it
+      (`gen_heap.rs`, `zgc.rs` — both have explicit doc comments stating "all allocation/collection
+      serialize through that mutex"); no unsafe `Sync`/raw-pointer bypass exists, so the `Cell`-based
+      cache cannot race across threads. `free_list_bytes()`'s only callers (`needs_gc`,
+      `live_bytes_estimate`, `remaining`) use it purely as a heuristic/estimate — never for unsafe
+      pointer arithmetic — and `Arena::alloc()`'s actual allocation logic always does its own
+      independent, authoritative bounds-checked work regardless of what the cache reports.
+    - **Direct reproduction hit an UNRELATED, real, pre-existing bug first**: every run — with or
+      without the round-2 fixes — crashed within seconds with `Error in thread "main" internal
+      error: Class.forName: class initialization failed: class initialization raised an exception`,
+      never reaching real test execution. Root cause: `native-builtins/src/lang_class.rs`'s
+      `Class.forName(name, true, loader)` implementation (the "HIB-CV-26" code path, committed
+      2026-06-23 — weeks before either investigation) wraps ANY nested class-initialization failure
+      (here, `MemorySegment.<clinit>` throwing `IllegalCallerException` because native access is
+      disabled by default post-security-audit, commit `8e9e85c8`) as an unrecoverable
+      `VmError::Internal` instead of a normal, catchable Java `ExceptionInInitializerError` — killing
+      the whole VM instead of letting JUnit report a failed test. Passing `--enable-native-access`
+      (documented, existing CLI flag) avoids triggering the nested failure and unblocks the run. This
+      is a genuine, separate, worth-fixing bug — filed for follow-up, NOT fixed in this session
+      (out of scope: unrelated code, would need its own investigation into every `initialize_class`
+      call site that wraps errors this way).
+    - **With that unblocked, the ACTUAL corruption warnings were reproduced** — confirming the
+      independent verification's observation was real, not a fluke. But a direct A/B (same build
+      host, same classpath, same JDK, `--enable-native-access` on both sides) proves `b7a1ed84` is
+      NOT the cause:
+
+      | Build | Corruption warnings | Completes in 1200s? | Result |
+      |---|--:|---|---|
+      | `96c8a57f` (round 1 only, BEFORE the round-2 arena fix) | 679,454 | **NO** (killed at timeout) | — |
+      | `dev` tip / `b7a1ed84`+, trial 1 (isolated) | 1,074 | Yes, 589s | 159/160 |
+      | `dev` tip / `b7a1ed84`+, trial 2 (isolated) | 786 | Yes, 556s | 160/160 |
+      | `dev` tip / `b7a1ed84`+, trial 3 (isolated) | 731 | Yes, 527s | 160/160 |
+
+      **Extended validation (2026-07-16, same session): 8 MORE trials — 11 total — to get real
+      statistical confidence, not just 3 lucky runs**, per a direct follow-up request after the
+      initial 3-trial result above. All 8 run under SELF-INDUCED CPU contention (deliberately, to
+      probe whether the corruption-heuristic's firing rate is load/timing-sensitive): two batches of
+      3 concurrent processes each, one batch of 2:
+
+      | Trial | Condition | Corruption warnings | Wall time | Result |
+      |---|---|--:|--:|---|
+      | 4 | 3-way parallel (batch A) | 1,477 | 678s | 159/160 |
+      | 5 | 3-way parallel (batch A) | 1,411 | 610s | 159/160 |
+      | 6 | 3-way parallel (batch A) | 1,093 | 716s | 160/160 |
+      | 7 | 3-way parallel (batch B) | 1,129 | 694s | 160/160 |
+      | 8 | 3-way parallel (batch B) | 1,962 | 708s | 160/160 |
+      | 9 | 3-way parallel (batch B) | 1,860 | 668s | 160/160 |
+      | 10 | 2-way parallel (batch C) | 884 | 623s | 160/160 |
+      | 11 | 2-way parallel (batch C) | 776 | 625s | 159/160 |
+
+      **Combined result across all 11 trials (3 initial isolated + 8 extended parallel): 11/11
+      (100%) completed within the 1200s bound.** Wall-clock time ranged 527s-716s (mean ≈636s) — no
+      trial came anywhere near the 1200s ceiling, let alone failed to finish. Corruption-warning
+      count ranged 731-1,962 (mean ≈1,199) — every single trial stayed 346x-929x BELOW the pre-fix
+      catastrophic case (679,454) and zero trials showed runaway/unbounded growth. Test-pass rate:
+      7/11 trials fully clean (160/160); 4/11 trials had exactly one unrelated failure (never more
+      than one, and NOT correlated with warning count: trial 6 (1,093 warnings) passed 160/160 clean
+      while trial 8 (1,962 warnings — the highest of all 11 trials) also passed 160/160 clean, yet
+      trial 4 (1,477 warnings, mid-range) lost one test) — this is separate, low-priority,
+      pre-existing test flakiness (a `ClassCastException` on
+      `RequestMappingHandlerMapping$AnnotationDescriptor` bean creation in at least 2 of the 4 cases;
+      the other 2 showed a different failure not yet identified), not chased further as clearly
+      out of scope for this investigation.
+
+      **The load-sensitivity hypothesis is confirmed, but bounded**: the 3 isolated trials (1-3)
+      averaged ~864 warnings vs. ~1,324 for the 8 trials run under self-induced 2-3-way parallel
+      contention (4-11) — about 53% higher, consistent with the corruption-detection heuristic firing
+      somewhat more under scheduling contention, as hypothesized. But even under that adverse,
+      artificially-induced condition (worse than a typical solo CI run — 2-3 full test-class runs
+      competing for the same cores simultaneously), every trial still completed comfortably inside
+      1200s with no sign of approaching the pre-fix non-completion regime. No trial across all 11
+      showed any early-warning signal (a mid-run spike, a stall, an accelerating rate) that would
+      suggest an occasional tip into the pre-fix catastrophic mode is lurking — the distribution looks
+      like ordinary variance around a stable, load-correlated mean, not a bimodal "usually fine,
+      occasionally catastrophic" pattern.
+
+      **On the discrepancy with the independent verification agent's 1200s-timeout run**: the
+      standard `spring-suite-runner`'s `run-suite.sh` does NOT pass `--enable-native-access` by
+      default either (confirmed by reading its source — the flag would have to be added via the
+      opt-in `EXTRA_VM_ARGS` env var, which a typical invocation would not set). If their harness
+      also omitted it, their run should have hit the SAME near-instant `Class.forName` crash this
+      investigation hit first, not run for 14.5 minutes with progress before showing corruption —
+      meaning either their invocation differed in a way not yet identified (a different harness, a
+      module-system flag, a different JDK build), or that crash is itself non-deterministic in a way
+      neither investigation has fully characterized. This is flagged as an open question for whoever
+      owns the independent-verification harness to check, rather than resolved here.
+
+      The corruption-detection-and-resync mechanism itself is OLD, pre-existing, deliberately-built
+      forensic instrumentation in the non-moving sweep (`gc/src/gen_heap.rs`, the
+      `[quiesce] FIRST corruption` diagnostic and its `resync_to_next_free_block`/`skip_free_blocks`
+      recovery path — confirmed via `git log` to predate this entire investigation by weeks; none of
+      the 41 commits between `b7a1ed84` and the verification tip touch this code, and it fires
+      identically on the commit BEFORE the arena fix). It is a conservative-scan heuristic that
+      sometimes misclassifies a live region as corrupt (the code's own comments call this "anomaly
+      evidence") and safely resyncs to the next known-good free-block anchor rather than risk
+      double-freeing — i.e. it is a (noisy but) SAFE recovery path by design, not silent data
+      corruption. What actually differs is severity: **628x fewer** warnings and **reliable
+      completion** with the round-2 fixes applied, vs. runaway warnings and non-completion without
+      them. This is because the round-2 fixes made the whole class ~2x faster (`~589s` vs. previously
+      unable to finish in 1200s), which gives the sweep's occasional heuristic misfire far less total
+      GC-cycle volume to compound across. **The round-2 arena fix mitigates this pre-existing issue's
+      practical impact; it does not cause it.**
+
+    `cargo test -p cratonvm-gc --lib`: 790 passed / 0 failed on the verification tip (both before and
+    after the arena fix). `cargo test -p cratonvm-vm --lib`: the same 9 pre-existing
+    debug-build-only `lock_order` failures, plus a variable number (7-8, non-deterministic across
+    reruns — 16 then 17 failures on two consecutive runs of the identical binary) of `jit::skip_list`
+    test failures that are parallel-test-execution races over shared global state in an unrelated
+    subsystem (`vm/src/jit/skip_list.rs`, nothing touched by any commit in this investigation) — flagged
+    as a separate, pre-existing test-suite flakiness item, not a real regression (not chased further;
+    out of scope for this investigation).
+
+    **Conclusion: `b7a1ed84` is NOT reverted — it is confirmed safe and net-positive.** The
+    non-moving-sweep corruption-warning phenomenon is real but pre-existing, already has a safe
+    (if noisy) recovery path, and is a separate open item from the CPU-dispatch/GC-bookkeeping work
+    in rounds 1-2. Two new, genuine follow-up items filed by this investigation: (1) the
+    `Class.forName`/`HIB-CV-26` unrecoverable-internal-error-on-nested-clinit-failure bug in
+    `native-builtins/src/lang_class.rs` (real, reproducible, deserves its own fix), and (2) the
+    non-moving sweep's occasional false-positive corruption detection under heavy allocation churn
+    (real, pre-existing, already has a safe recovery path but the false-positive rate itself — and
+    whatever per-resync cost compounds into non-completion on a slow/loaded run — is unexplained and
+    worth its own dedicated investigation).
+
+    ~~`Class.forName`/`HIB-CV-26` unrecoverable-internal-error-on-nested-clinit-failure~~
+    **FIXED (2026-07-16), commit `43e130fa` (merged to `dev` at `ba51b880`).** Root cause was
+    TWO stacked defects, both in the class-initialization-failure-wrapping machinery, not just
+    the `Class.forName` call site:
+    1. `NativeContext::initialize_class` (`native-api/src/registry.rs`) had a lossy
+       `Result<(), String>` signature. Its one real implementation
+       (`vm/src/vm/vm_exec.rs`) called the interpreter's `ensure_class_initialized_shared`
+       (which already correctly wraps a `<clinit>` exception as a catchable
+       `MethodCallFailed::ExceptionThrown(ExceptionInInitializerError)` per JVMS §5.5) and then
+       *discarded* that distinction, flattening both `ExceptionThrown` and `InternalError` into
+       a bare string. All 5 native-builtins call sites (`Class.forName` in `lang_class.rs`,
+       `Constructor.newInstance` also in `lang_class.rs`, and two independent
+       `Lookup.ensureInitialized` registrations in `lang_invoke.rs` / `classloader.rs`) then
+       re-wrapped that string as an unrecoverable `VmError::Internal` — turning an ordinary,
+       catchable `<clinit>` exception into a VM abort every time. Fix: changed the trait method
+       to return `Result<(), MethodCallFailed>` (mirroring the already-correct sibling
+       `ensure_class_initialized_with_class_id`) and pass the interpreter's result straight
+       through; all 5 call sites now propagate via `?` instead of hand-rolling a
+       `VmError::Internal`.
+    2. Verifying fix #1 surfaced a second, closely related bug in
+       `ensure_class_initialized_shared` itself (`vm/src/vm/vm_util.rs`, two occurrences): when
+       a class is re-triggered for initialization after already being marked
+       `ClassState::InitializationError` (JVMS §5.5's "already failed to initialize" case —
+       e.g. a caller that `catch`es the first `ExceptionInInitializerError` and retries), the
+       function returned `MethodCallFailed::InternalError(VmError::Linkage(NoClassDefFoundError))`
+       — also uncatchable, so a caught-and-retried `Class.forName` crashed the VM on the
+       *second* call. Fixed by routing both occurrences through the existing
+       `raise_no_class_def_found` helper (`vm/src/runtime/exceptions.rs`), which constructs the
+       real, catchable `NoClassDefFoundError` object. One of the two occurrences is reached
+       while still holding the `class_manager` write-lock guard (`cm`) that the local `class:
+       &mut Class` borrow is tied to; `raise_no_class_def_found` itself needs to read/write that
+       same `RwLock` to allocate the exception object, so an explicit `drop(cm)` was added
+       immediately before the call to avoid a self-deadlock (the borrow's last use is the
+       preceding `class.name.to_string()`, so NLL allows the drop).
+
+    Verified with a standalone repro (`Class.forName("java.lang.foreign.MemorySegment")`,
+    `--java-home <jdk25>`, no `--enable-native-access`, so `MemorySegment.<clinit>` throws
+    `IllegalCallerException` exactly as in the original finding): uncaught now prints a normal
+    `Exception in thread "main" java/lang/ExceptionInInitializerError` trace and exits 1 (was: VM
+    abort); wrapped in `try/catch (ExceptionInInitializerError)` it recovers cleanly and control
+    continues; a second `Class.forName` call on the now-poisoned class throws (and catches as)
+    `NoClassDefFoundError` instead of crashing. `cargo test -p cratonvm-native-builtins --lib
+    --release`: 2999 passed / 0 failed. `cargo test -p cratonvm-vm --lib --release`: 2199 passed
+    / 16 failed — the same pre-existing `lock_order` debug-build-only + `jit::skip_list`
+    parallel-race flakiness documented above, zero new failures.
+
+    Also re-ran `RequestMappingMessageConversionIntegrationTests` (`spring-webflux`) without
+    `--enable-native-access` as an end-to-end check: it no longer dies instantly at
+    `MemorySegment.<clinit>` — it now runs for several minutes and gets through ~26 Tomcat-backed
+    test methods (consistent with the "~29 Tomcat-backend tests" ceiling already documented
+    above for this class) before hitting a `SIGSEGV` in `gc/src/gen_heap.rs`'s non-moving-sweep
+    path, preceded by 2000+ "implausible object size" / corruption-resync warnings — i.e. it now
+    runs into follow-up item (2) above (the pre-existing, already-filed, separate non-moving-sweep
+    false-positive-corruption issue), not a HIB-CV-26 regression. This host was also running
+    several other sessions' builds/tests concurrently at the time (including at least one other
+    unrelated binary segfaulting minutes earlier), so heavy contention is a plausible contributor;
+    not re-tested in isolation due to time. Flagged here so whoever picks up item (2) has this
+    additional data point: fixing HIB-CV-26 means real full-class runs now reach far enough to
+    actually exercise the non-moving-sweep bottleneck instead of being masked by the earlier,
+    more-severe `Class.forName` abort.
+
+    **Round 4 (2026-07-16): dedicated feasibility investigation into the `is_object_address` /
+    `update_root_snapshot` conservative-GC-root-scanning bottleneck itself (the item Round 2
+    identified as "a substantially larger effort than a bug-fix session"). Result: a genuine,
+    well-evidenced, provably-safe redundancy WAS found and implemented, but it measured as a
+    PERFORMANCE REGRESSION rather than a win on the best available repro — NOT landed to `dev`.**
+    Branch `fix/precise-native-scan-20260716` (pushed, unmerged, commit `faedea48`) preserves the
+    full implementation and data for a future session with working profiler access.
+
+    Investigation: `update_root_snapshot`'s interpreter-frame operand-stack scan
+    (`ValueStack::scan_object_refs`, `vm/src/runtime/value_stack.rs`) already distinguishes
+    genuine object references from long-bit-pattern false positives via a per-slot `kinds`
+    side-array (commit `6161dc1b`, 2026-05-29 — "marks are only ever written at genuine
+    long/double producers, never over-marked"). Despite that, FOUR hot call sites
+    (`update_root_snapshot`'s two internal paths in `interpreter.rs`, `collect_roots` in
+    `vm/src/memory/roots.rs`, and the blocked-thread deposit path in `vm/src/vm/vm_exec.rs`) all
+    additionally re-validate EVERY entry `scan_object_refs` appends against the expensive, strict
+    `heap.is_object_address` header probe — a defense that predates the `kinds` mechanism
+    (introduced in commit `56a73aee`, 2026-05-16, thirteen days earlier) and, once `kinds` exists,
+    can never actually reject anything from the kind-verified branch: `git log` confirms the
+    ordering (boundary filter added first, kinds added later), and the mirrored fix already
+    landed for LOCALS (`Frame::scan_local_objects`, commit `333b24b5`, "root young/mid-init
+    objects held in frame locals") explicitly switched off the equivalent strict probe for the
+    same reason — it can incorrectly DROP a genuine root whose header a moving collector's
+    young/mid-init state hasn't fully validated yet. A dedicated investigative sub-agent
+    additionally confirmed the generational allocator (`gc/src/gen_heap.rs::alloc_object` and
+    siblings) writes the full object header synchronously, under the arena lock, before ever
+    returning the pointer to any caller (commit `74dc80b8d`, 2026-07-03) — closing the one
+    remaining question about whether a kind-verified operand-stack root could ever observe an
+    unpublished header. G1 and ZGC were NOT independently audited for the same allocator
+    invariant (their allocators release the region/arena lock before the header write), so the
+    implementation scoped the change to `VmHeap::is_generational()` only, leaving G1/ZGC on the
+    unconditional pre-existing validation.
+
+    Implementation: `ValueStack::scan_object_refs_split` appends roots in the SAME single pass as
+    `scan_object_refs` (a first two-pass draft was measurably slower — see Performance below —
+    and was replaced), additionally recording the (normally empty) list of offsets that came from
+    the separate, unrelated "loose JNI-long-smuggle" candidate path (untagged `Long`/`Double`
+    slots, still validated exactly as before). `memory::roots::scan_stack_roots_boundary` (new,
+    shared by all four call sites) skips the `is_object_address` re-probe entirely for the
+    trusted majority, gated on `VmHeap::is_generational()` (new) and a default-on opt-out flag
+    `CRATONVM_TRUST_TAGGED_STACK_ROOTS` (env_cache.rs), plus a `CRATONVM_DBG_VERIFY_TRUSTED_ROOTS`
+    diagnostic that probes the skipped entries anyway and logs (without dropping) any mismatch —
+    the empirical falsification test for the whole argument.
+
+    **Correctness: extensively verified, zero issues found.** `cargo test -p cratonvm-gc --lib`:
+    790/0 (matches the established baseline exactly). `cargo test -p cratonvm-vm --lib`: 2199
+    passed / 16 failed, and the failing set is EXACTLY the pre-existing, already-documented
+    9 debug-build-only `lock_order` + 7 parallel-race `jit::skip_list` tests (see Round-3's
+    "16 then 17 failures" note above) — zero new failures. The `binarytrees` checksum oracle
+    (`docs/internal/repros/gc-stress-bintrees-main-args/binarytrees.java`, the heaviest
+    allocation/GC-stress repro in the tree) was run at all three documented depths with
+    `CRATONVM_DBG_VERIFY_TRUSTED_ROOTS=1`: bt14 (checksum `3222190`), bt16 (`14985902`), bt18
+    (`68332206`, `-Xmx8g`) — all three matched the documented golden checksums exactly, and ZERO
+    trusted-root mismatches were logged across any of them (bt18 alone triggers a very large
+    number of collections). Note bt14/16/18 are pure-bytecode benchmarks with NO native calls,
+    so they exercise `collect_roots` (the STW mark path) heavily but not the native-call-triggered
+    `update_root_snapshot` path — both were still covered since `collect_roots` is one of the four
+    modified call sites.
+
+    **Performance: does NOT deliver the hoped-for win — a measured regression, not landed.**
+    `RequestMappingMessageConversionIntegrationTests` itself was not re-run end-to-end (it needs
+    ~530-720s per the Round-3 data and this investigation's time budget did not allow a full
+    before/after suite comparison); instead the isolated, properly-packaged Spring-bootstrap repro
+    from the Round-2 investigation (`BootstrapRepro2.java`, `com.example.bootstraprepro` package,
+    `AnnotationConfigApplicationContext` + embedded Tomcat, native-call-heavy — the same shape as
+    the profiled bottleneck) was run under `CRATONVM_DBG_ROOTSNAP` (the in-tree diagnostic built
+    specifically to measure this exact question), 30 iterations per run to average out host-load
+    noise on the shared build host (confirmed heavily loaded — 15-20+ concurrent `cargo`/`rustc`
+    processes from other sessions throughout this investigation):
+
+    | Build | `update_root_snapshot` avg cost/call |
+    |---|--:|
+    | baseline (dev `1f8e398e`, doc-only-commits ancestor of this branch's base) | ~1.9–2.0 us |
+    | this branch, optimization ON (`CRATONVM_TRUST_TAGGED_STACK_ROOTS=1`, default) | ~2.5–2.6 us |
+    | this branch, optimization OFF (`=0`, same binary, old behavior) | ~2.2 us |
+
+    Reproduced across TWO independent implementations (the original two-pass split, and the
+    single-pass redesign written specifically to rule out double-iteration overhead as the cause)
+    — both showed the same regression shape, so this is not attributed to the two-pass draft
+    alone. The flag-OFF control run on the same v2 binary is ALSO slower than the true baseline
+    (~2.2us vs ~1.9-2.0us), which isolates that at least part of the regression comes from
+    refactoring `scan_object_refs` into two small `#[inline]` helper methods
+    (`push_trusted_object_ref` / `push_smuggled_long_ref`) shared with the new split function —
+    an extraction that looked behavior-preserving and low-risk but apparently changed
+    inlining/codegen even on the code path that should be byte-identical to before. The remaining
+    gap (flag ON vs flag OFF on the same binary) is the actual cost of the new
+    split/boundary-filter machinery, separate from the extraction regression.
+
+    **`perf record` was unavailable to root-cause this precisely**: `perf_event_paranoid=4` on
+    the build host blocks unprivileged profiling, and `sudo perf record` (which has passwordless
+    sudo on this host) ran past its own `timeout 120` wrapper without producing usable output —
+    killed manually after several minutes with no progress. Without instruction-level attribution,
+    it was not possible in this session to distinguish "LLVM declined to inline
+    `scan_stack_roots_boundary` across the module boundary" from "the thread-local
+    `RefCell`-guarded scratch buffer for untrusted-offsets has real per-call TLS/borrow-check
+    cost" from some other codegen effect of the refactor.
+
+    **Conclusion and recommendation**: the CORRECTNESS argument for this optimization is sound
+    and thoroughly verified — the redundancy is real, provable from the `kinds` side-array's own
+    invariants, and empirically confirmed to never misfire across the checksum oracle. The
+    PERFORMANCE argument, which is the entire reason to make this change, is NOT confirmed — it
+    is contradicted by direct, repeated measurement. Per this investigation's own mandate ("if you
+    have any doubt about correctness [or value], don't land it; document the attempt and doubt
+    instead"), this is NOT merged into `dev`. A future session with working `perf` (or `gdb`-based
+    sampling, or a from-scratch `objdump`/`cargo asm` inspection of the generated code) should
+    either (a) determine why the seemingly-inert `scan_object_refs` extraction regressed the
+    flag-OFF control and fix the codegen issue, then re-measure the flag-ON case in isolation, or
+    (b) if the fundamental costs really are TLS/call-boundary/branch overhead that eats the
+    `is_object_address` savings for typical (shallow) operand stacks, conclude this specific
+    avenue is not profitable and that the actual remaining path to closing
+    `RequestMappingMessageConversionIntegrationTests`'s perf gap is the full precise-stack-maps
+    project Round 2 already scoped (new stack-map generation for interpreter frames at
+    native-call boundaries, reusing the verifier's existing type-inference machinery if one
+    exists — NOT investigated in this round beyond confirming the JIT's existing
+    `PreciseFrameInfo`/`scan_one_frame_precise` machinery in `vm/src/jit/conservative_roots.rs`
+    is structurally scoped to JIT-compiled frames only, at GC-safepoint/JIT-frame-scan sites, and
+    does not extend naturally to interpreter frames at native-call boundaries — a genuinely
+    separate, larger piece of infrastructure).
+*   ~~`web.reactive.result.view.script.JRubyScriptTemplateTests`~~ **FIXED (2026-07-15) --
+    all 6 chained bugs closed, test class PASSES.** JRuby's own
     bootstrap (`rubygems/specification.rb` / `rubygems/version.rb`) turned out to hit a CHAIN of
     independent CratonVM bugs, each masking the next -- fixing one just exposes the next further
     into the same bootstrap. Root-caused and fixed so far:
@@ -713,38 +1098,650 @@ rule `uri_scheme_name_fail_index` already enforced for exceptions). The class is
     `--release`-only `lock_order` failures; `cargo test -p cratonvm-native-builtins --lib
     --release` unchanged at 2997 passed / 0 failed.
 
-    **OPEN — bug 3, current blocker, NOT fixed.** Past (1)+(2), the same minimal repro (and the
-    full test class) now hits `ArgumentError: wrong number of arguments (given 0, expected
-    1..2)` at `rubygems/version.rb:413` (`canonical_segments`'s `partition_segments(...)` /
-    the preceding `@version.sub(regex, "")` call), raised from deep inside REAL gem-dependency
-    resolution (`Gem::Dependency#to_spec` → `#to_specs` → `#matching_specs` →
-    `Specification.find_all_by_name` → `Requirement#satisfied_by?` → `RubyComparable#>=` →
-    `Version#<=>` → `#canonical_segments`) — i.e. this is reached only once (1) and (2) let
-    bootstrap progress far enough to start resolving real gem versions. Traced via
-    `CRATONVM_DBG_INDY_GENERIC=1` to `org.jruby.ir.targets.simple.NormalInvokeSite.bootstrap`'s
-    `invoke:sub(ThreadContext, IRubyObject, IRubyObject, IRubyObject, IRubyObject)` call site:
-    the operand stack legitimately holds exactly 5 values when `bootstrap_generic`
-    (`vm/src/runtime/invokedynamic.rs`) pops them (no stack-depth mismatch — added a
-    `CRATONVM_DBG_INDY_GENERIC`-gated depth log to confirm), but the VALUES are wrong: the
-    receiver slot holds the `Gem::Version` instance itself (`self`) instead of `@version`'s
-    string value, and a second `Regexp` literal (seemingly meant for a *different*,
-    conditionally-executed `.sub!` call on the next source line) ends up in the
-    replacement-string/block argument slots instead of the frozen `""` string. This points
-    upstream of `bootstrap_generic`'s own (verified-correct) pop loop, into how earlier
-    nested `invokedynamic` sites (ivar-get, `RegexpObjectSite`, `StringBootstrap.fstring`) or
-    JRuby's own IR-interpreter call-site linkage populate that operand stack.
+    **OPEN — bug 3, current blocker, NOT fixed (updated 2026-07-15, round 2).** Past (1)+(2),
+    the same minimal repro (and the full test class) still hits `ArgumentError: wrong number of
+    arguments (given 0, expected 1..2)` at `rubygems/version.rb:413` (`canonical_segments`'s
+    `@version.sub(regex, "")` call), raised from deep inside REAL gem-dependency resolution
+    (`Gem::Dependency#to_spec` → `#to_specs` → `#matching_specs` → `Specification.find_all_by_name`
+    → `Requirement#satisfied_by?` → `RubyComparable#>=` → `Version#<=>` → `#canonical_segments`) —
+    reached only once (1) and (2) let bootstrap progress far enough to resolve real gem versions.
 
-    **Why this looks like a fundamentally larger scope, not one more targeted site**:
-    `org.jruby.ir.targets.indy.InvokeSite` — JRuby's call-linkage base class for essentially
-    every ordinary Ruby method invocation (both `(1)`'s `BlockCallback` sites and `(2)`'s
-    `VariableSite` sites are comparatively narrow siblings of this) — composes its real target
-    handles from, per its own decompiled bytecode: `MethodHandles.dropArguments` (6 call
-    sites), `insertArguments` (6 call sites), `foldArguments` (1), `filterReturnValue` (1 — the
-    same combinator fixed in (2), reused here in a different composition), and `guardWithTest`
-    (1), all interacting to build a lazily-specializing polymorphic inline cache. Isolating
-    which exact composition (or combination) misbehaves for THIS call shape would need
-    systematically verifying each of `dropArguments`/`insertArguments`/`foldArguments`
-    (`native-builtins/src/lang_invoke.rs`) against real JDK semantics for arbitrary
-    argument-count/position combinations, not a single targeted fix — flagged for a dedicated
-    follow-up investigation rather than continued ad-hoc tracing here.
+    **Round 1** traced via `CRATONVM_DBG_INDY_GENERIC=1` to
+    `org.jruby.ir.targets.simple.NormalInvokeSite.bootstrap`'s
+    `invoke:sub(ThreadContext, IRubyObject, IRubyObject, IRubyObject, IRubyObject)` call site: the
+    operand stack legitimately holds exactly 5 values when `bootstrap_generic`
+    (`vm/src/runtime/invokedynamic.rs`) pops them (no stack-depth mismatch), but the VALUES are
+    wrong: the receiver slot holds the `Gem::Version` instance itself (`self`) instead of
+    `@version`'s string value, and a stray `Regexp` literal lands in the replacement-string/block
+    argument slots instead of the frozen `""` string.
+
+    **Round 1 fix (genuine but did not close this)**: `MethodHandles.dropArguments`
+    (`native-builtins/src/lang_invoke.rs`, `MH_KIND_DROP`) computed how many arguments to discard
+    as `extra_args.len() - inner_expected`, re-deriving `inner_expected` at DISPATCH time by
+    re-parsing the wrapped inner handle's reported descriptor — fragile for nested/chained
+    `dropArguments` (JRuby's `InvokeSite` composes SIX `dropArguments` calls per call site, several
+    nested). Fixed to store the exact drop count explicitly at construction time (`"pos:count"`
+    encoded in `MH_CLASS`) instead of re-deriving it — commit `6a77cd93`, with a new regression
+    test (`drop_arguments_dispatch_keeps_correct_slot_not_adjacent_ones`, previously zero
+    MethodHandle-combinator-dispatch test coverage existed in this file). Verified as a genuine,
+    independent correctness fix (`cargo test -p cratonvm-native-builtins --lib --release`: 2998
+    passed / 0 failed) — but the minimal repro still hits the IDENTICAL `ArgumentError` afterward:
+    `dropArguments` is not even exercised on this specific call's path.
+
+    **Round 2 — full combinator-chain tracing (added `MH_DISPATCH_ARGS`, alongside the existing
+    `CRATONVM_DBG_MH_DISPATCH`, to print every dispatch step's actual argument VALUES, not just
+    argc).** Walked the ENTIRE chain for the specific `ivarGet:@version` call that produces the
+    wrong receiver:
+    `guardWithTest(test=insertArguments(testRealClass, classId), target=filterReturnValue(target=
+    RubyObject5.var0-getter, filter=insertArguments(Helpers.nullToNil, nilSingleton)),
+    fallback=...)`, dispatched with `[self]`. EVERY step computes the mathematically correct
+    value: `testRealClass(classId, self)` → true; `var0(self)` → `@version`'s real `FString`
+    value; `nullToNil(FString, nil)` → the same `FString` (non-null passthrough); the WHOLE chain's
+    logged `"indy-generic] target MH invoke result"` is correctly that `FString`. `guardWithTest`,
+    `insertArguments` (both occurrences), and `filterReturnValue` (this investigation's own
+    round-1 fix, commit `3af9ab62`) all forward/receive exactly the args JDK semantics require —
+    no combinator in this chain is at fault.
+
+    Despite the computation being correct, the FOLLOWING `invoke:sub` call's popped operand-stack
+    values show BOTH `self` (the ORIGINAL, pre-`ivarGet` value) AND the correctly-computed `FString`
+    result present as separate stack slots (`self` at the position `FString` should occupy, and
+    every value after it shifted one slot right) — i.e. the `ivarGet` `invokedynamic` instruction's
+    result push did not correctly REPLACE `self` on the operand stack; `self` and the result both
+    ended up present. `bootstrap_generic`'s own pop/push mechanics were re-read line-by-line and are
+    correct (`ValueStack::pop_compact` is a genuine decrement-then-read, not a peek). This rules
+    OUT every MethodHandle combinator AND `bootstrap_generic`'s own stack bookkeeping as the fault;
+    the extra `self` most likely comes from an ORDINARY (non-`invokedynamic`) bytecode instruction
+    — a `dup`/extra `aload` — in JRuby's own dynamically-IR-compiled snippet for this call
+    instruction, which CratonVM's core opcode interpreter (not the MethodHandle/indy subsystem)
+    executes. This snippet is synthesized at runtime by JRuby's own IR-to-bytecode compiler (not
+    present as a static `.class` file `javap` can decompile), so confirming the exact instruction
+    responsible would need bytecode-level dumping/disassembly of runtime-generated method bodies —
+    a different, larger investigation than MethodHandle-combinator auditing (which this round
+    conclusively ruled out via direct argument-value tracing, not by assumption).
+
+    **Evidence for round 2**: `cargo test -p cratonvm-native-builtins --lib --release` unchanged at
+    2998 passed (2997 baseline + the round-1 regression test) / 0 failed; `cargo test -p
+    cratonvm-vm --lib --release` unchanged at 2205 passed / 9 pre-existing `--release`-only
+    `lock_order` failures; minimal repro (`require 'erb'; require 'ostruct'`) and the full
+    `JRubyScriptTemplateTests` class both still fail with the identical `ArgumentError` at
+    `rubygems/version.rb:413` after every fix landed so far. `JRubyScriptTemplateTests` remains
+    FAILING end-to-end — flagged for a dedicated follow-up with bytecode-level tracing of the
+    runtime-generated `canonical_segments` snippet's actual dup/aload/astore instruction sequence.
+
+    3. **FIXED, commit `9a6e945a`.** Round 3 followed the coordinator's instruction to dump the
+       ACTUAL runtime-generated bytecode (new `CRATONVM_DBG_BYTECODE_DUMP` diagnostic in
+       `push_frame_and_fire_entry`, `vm/src/runtime/interpreter.rs`) for `canonical_segments`'s
+       `.sub()` call site. The disassembly DISPROVED round 2's "extra `self` from a stray
+       `dup`/`aload`" hypothesis outright: the `aload_2` (self) at the call site is a
+       deliberate, compiler-emitted instruction (JRuby's own call-site convention pushes the
+       CALLER's `self` as a visibility-check argument, separate from the receiver) -- not an
+       accidental leftover. Re-decompiling the real `jruby-base-10.0.2.0.jar`'s
+       `org.jruby.ir.targets.indy.InvokeSite`/`NormalInvokeSite` classes via `javap -p` showed
+       BOTH real `invoke(...)` overloads take a trailing plain `IRubyObject[] args` array
+       parameter (`(ThreadContext, IRubyObject, IRubyObject, IRubyObject[], Block)` and
+       `(ThreadContext, IRubyObject, IRubyObject[], Block)`) -- NEITHER is Java `ACC_VARARGS`
+       (ordinary `T[]`, not `T...`). Live `CRATONVM_DBG_MH_DISPATCH` tracing against the FULL
+       `JRubyScriptTemplateTests` run (not just the minimal repro) confirmed the terminal
+       `NormalInvokeSite.invoke` dispatch: its OWN recorded descriptor (now also traced --
+       added `desc={desc:?}` to the dispatch log) correctly reports the 5-param array-typed
+       signature, but it was invoked with 6 FLAT values
+       `[ctx, self, receiver, Regexp, Block, replacement-FString]` -- the Block landed in the
+       array's slot, pushing the true last argument out past it. Root cause:
+       `collect_trailing_varargs` (`native-builtins/src/lang_invoke.rs`) -- the function
+       responsible for packing excess trailing MethodHandle-dispatch arguments into a target's
+       trailing array parameter -- only did so when the target was Java `ACC_VARARGS`. JRuby's
+       `invokebinder`-built call chain supplies these trailing values via a sequence of
+       correctly-implemented `MethodHandles.insertArguments` splices (traced and verified
+       directly -- not the bug) and never calls `asCollector` (confirmed absent from the entire
+       dispatch chain via the same trace), so by dispatch time an arity mismatch against an
+       array-typed last param is the only signal available, and the old ACC_VARARGS-only gate
+       missed it for this (and any other) plain-`T[]`, non-varargs target. Fix: also collect
+       when `params.len() > declared_param_count` and the last declared param is an array type,
+       independent of ACC_VARARGS. `cargo test -p cratonvm-native-builtins --lib --release`:
+       2999 passed / 0 failed; `cargo test -p cratonvm-vm --lib --release`: 2205 passed / 9
+       pre-existing `--release`-only `lock_order` failures, unrelated.
+
+    4. **FIXED, commit `fc9c3a85`.** Live tracing (with bug 3's fix applied) showed the
+       `RubyComparable.op_ge` -> `JavaMethod$JavaMethodOneOrTwoBlock` `ArgumentError` (given 0,
+       expected 1..2) was NOT a different dispatch mechanism after all -- it was the SAME
+       `collect_trailing_varargs` (`native-builtins/src/lang_invoke.rs`) that bug 3 touched,
+       with two more precise gaps in the SAME function, both hit by the exact same
+       `canonical_segments` call chain immediately after the `.sub()` call bug 3 fixed:
+       (a) it assumed the array-typed parameter is always the descriptor's LAST parameter
+       (`ptypes.last()`), but JRuby's Ruby-call convention routinely appends a trailing `Block`
+       parameter AFTER the args array (`InvokeSite#invoke(ThreadContext, IRubyObject,
+       IRubyObject, IRubyObject[], Block)`), so the array sits at `len - 2`, not `len - 1`, and
+       the old code bailed out before even checking arity -- worse, because CratonVM's
+       `MethodHandles.insertArguments` chain never collapses the array until this function runs,
+       the `Block` value is frequently spliced into the MIDDLE of what should become the array's
+       contents (traced: `[..., Regexp, Block, replacement]`), so a naive "last N positions"
+       split can't recover the right grouping even once the array is found; fixed by locating
+       the array by scanning (not assuming last) and recovering the split by matching each
+       trailing declared type (e.g. `Block`) against its RUNTIME class within the tail region,
+       pulling matches out wherever they actually sit. (b) the `arity_excess` trigger
+       (`params.len() > declared_param_count`) only caught cases with MORE flat args than
+       declared params; a single data value destined for a 1-element array arrives with
+       `params.len() == declared_param_count` exactly (no excess) but the value at the array's
+       position is a bare scalar -- traced on `org.jruby.ir.targets.indy.SelfInvokeSite.invoke`
+       (the very next call in the same chain, right after `.sub()`): arrived with exactly 4 flat
+       args matching declared arity, 3rd (array-typed) slot holding one bare `IRubyObject`,
+       surfacing as `ArgumentError: wrong number of arguments (given 0, expected 1)` inside the
+       interpreted Ruby method it called; fixed by also triggering collection when the exact
+       arity matches but the array-position value isn't already array-shaped (nor null).
+       `cargo test -p cratonvm-native-builtins --lib --release -- --test-threads=1`: 2999
+       passed / 0 failed (the default multi-threaded run showed 1 unrelated pre-existing
+       test-ordering flake, `lang_system::checkexec_security_tests::
+       denying_sm_blocks_runtime_exec_before_spawn`, confirmed passing alone and under
+       `--test-threads=1`); `cargo test -p cratonvm-vm --lib --release`: 2205 passed / 9
+       pre-existing `--release`-only `lock_order` failures, unrelated.
+
+       **Shared root cause found** (per the coordinator's request to check across bugs 1/3/4):
+       bugs 3 and 4 turned out to share ONE root cause -- both were gaps in the SAME
+       `collect_trailing_varargs` function, now closed together in this one commit. Bug 1
+       (SAM/lambda array-vs-scalar dispatch, `lambda_args_sam_compatible` in `interpreter.rs`)
+       remains a genuinely separate code path -- already independently confirmed in the round-1
+       investigation, no further common root found there.
+
+    **Evidence for bug 3+4 combined**: with both fixes applied, the minimal repro (and the full
+    `JRubyScriptTemplateTests` class) progress completely PAST `rubygems/version.rb` -- both the
+    `op_ge` arity bug and the `SelfInvokeSite` scalar-wrap bug are gone, `Gem::Version` comparison
+    now works end-to-end -- into `require 'ostruct'`, hitting a new, unrelated failure.
+
+    5. **FIXED, commit `d250607f`.** Root cause: `bootstrap_generic`
+       (`vm/src/runtime/invokedynamic.rs` -- the generic, uncached fallback used to link any
+       indy call site not specially handled) builds the BOOTSTRAP METHOD's own argument list
+       FLAT (`[lookup, name, methodType, static_arg_1, ..., static_arg_N]`), correct for the
+       common bootstrap shapes seen elsewhere (`(Lookup,String,MethodType)`, or fixed-arity
+       extra args) but wrong for a bootstrap method whose LAST formal parameter is `Object[]`,
+       collecting ALL extra constant-pool bootstrap arguments (JVMS-legal; mirrors a Java
+       varargs method) -- exactly JRuby 10.x's string-interpolation bootstrap,
+       `BuildDynamicStringSite.buildDString(Lookup, String, MethodType, Object[])` (confirmed
+       via `javap`). Without packing, the declared `Object[] bsmArgs` parameter received
+       `bsm_args[3]` -- the FIRST static bootstrap arg, a scalar, not an array;
+       `BuildDynamicStringSite`'s own constructor then computes `bsmArgs.length - 6` as a
+       metadata offset, CratonVM's `arraylength`-of-non-array guard silently returns 0 for the
+       scalar, the offset goes negative, and the next `aaload` throws
+       `ArrayIndexOutOfBoundsException` at `<init>` -- reached via `JRubyScriptTemplateTests`'s
+       `require 'ostruct'` (`ostruct.rb:477`, inside `OpenStruct`'s class body). Fixed by adding
+       `descriptor_param_count_and_last_is_object_array` (deliberately narrower than
+       `native-builtins`'s `collect_trailing_varargs` -- per JVMS this bootstrap-method
+       collecting parameter is always both syntactically LAST and always exactly `Object[]`, so
+       none of that function's Block-after-array ordering complication applies here) and, when
+       the bootstrap descriptor's last param is `[Ljava/lang/Object;` and more static args were
+       supplied than declared params, packing the excess into a real `Object[]` (boxing
+       primitive `Value`s via `Integer/Long/Float/Double.valueOf` -- `Object[]` elements must be
+       references) before invoking. Verified: `<init>` no longer throws
+       `ArrayIndexOutOfBoundsException` in any of 9 repeated `JRubyScriptTemplateTests` runs.
+       `cargo test -p cratonvm-native-builtins --lib --release -- --test-threads=1`: 2999
+       passed / 0 failed; `cargo test -p cratonvm-vm --lib --release`: 2205 passed / 9
+       pre-existing `--release`-only `lock_order` failures, unrelated.
+
+    **Evidence for bug 5**: with the fix applied, `BuildDynamicStringSite` construction itself
+    (the `<init>` crash) is reliably gone across repeated runs -- but a DIFFERENT, downstream bug
+    in the SAME class's runtime dispatch then surfaces (see bug 6 below), so
+    `JRubyScriptTemplateTests` still does not pass reliably yet. One isolated run DID pass
+    end-to-end (found=1 succ=1 fail=0 status=OK) before bug 6 was characterized, confirming the
+    remaining gap is narrow, but 8 of 9 repeated runs since have hit bug 6's `ClassCastException`
+    -- NOT claiming the class passes; treating the single pass as most likely a timing-dependent
+    window rather than a reliable state.
+
+    6. **FIXED, commit `78198922`.** Initial round-5 hypothesis (repeated below for the trail,
+       then corrected): after bug 5's fix, `BuildDynamicStringSite` construction succeeds, but its
+       RUNTIME string-building dispatch threw `java.lang.ClassCastException:
+       org.jruby.runtime.ThreadContext cannot be cast to org.jruby.runtime.builtin.IRubyObject`
+       inside `RubyString.append` <- `appendAsStringOrAny` <- `BuildDynamicStringSite.buildString`.
+       Live `CRATONVM_DBG_MH_DISPATCH` tracing showed the final `buildString` dispatch (5-param
+       overload `(ThreadContext, IRubyObject, ByteListAndCodeRange, Encoding, int)`) receiving 6
+       flat args `[ThreadContext, ThreadContext, ByteListAndCodeRange, Encoding, Integer,
+       RubySymbol]` -- a duplicated `ThreadContext` sitting where the dynamic interpolated value
+       (`RubySymbol`) should be, with that value pushed to the very end instead. Traced upstream to
+       a `MethodHandles.permuteArguments` (`MH_KIND_PERMUTE`) step whose reorder `int[]` reads
+       `[0, 0, 1]`. **Initial suspicion that this reorder array itself was wrong was DISPROVED** by
+       `javap`-decompiling the real, unmodified `com.headius.invokebinder-1.14.jar`'s `Binder`
+       class plus `BuildDynamicStringSite`'s own constructor bytecode: the `[0, 0, 1, ...]` shape is
+       computed by genuine, correct invokebinder bytecode with a deliberate "one `(ThreadContext,
+       value)` pair per interpolated segment" stride pattern, and `MH_KIND_PERMUTE`'s dispatch was
+       independently re-verified against the real JDK `permuteArguments` semantics and found
+       correct. The REAL root cause, one level further downstream: right after the permute,
+       JRuby's bytecode (via `Binder.collect(index, count, type, filterMH)`, itself calling
+       `MethodHandles.collectArguments(target, pos, filter)`) is meant to consume each
+       `(ThreadContext, value)` pair through a `to_s`-guard filter handle, REPLACING the pair with
+       one converted `IRubyObject`. `collectArguments` (`native-builtins/src/lang_invoke.rs`) was a
+       complete no-op stub -- `Ok(Some(args.first().copied()...))`, returning the target unchanged
+       and silently dropping `pos`/`filter` entirely (the same failure shape as the
+       `filterReturnValue` no-op bug fixed in round 1, commit `3af9ab62`). Without it, the
+       duplicated `ThreadContext` was never reduced away and survived unchanged into
+       `buildString`'s `IRubyObject` slot. Fixed by adding `MH_KIND_COLLECT_ARGS` +
+       `make_collect_args_adapter` + `mh_dispatch_collect_args`, modeled on the existing
+       `MH_KIND_FOLD`/`foldArguments` machinery (same wrapper shape) but with REPLACE semantics
+       (the consumed range is replaced by the filter's result) instead of fold's
+       splice-in-addition-to-the-full-list semantics. `cargo test -p cratonvm-native-builtins --lib
+       --release -- --test-threads=1`: 2999 passed / 0 failed. `cargo test -p cratonvm-vm --lib
+       --release -- --test-threads=1`: 2197 passed / 17 failed -- 9 are the documented pre-existing
+       `lock_order` failures; the other 8 (`jit::skip_list::tests::*`) were confirmed, via `git
+       stash` (this fix backed out, rebuilt, retested: identical 17/17 failures), to be ALREADY
+       present on `dev` independent of this change -- a separate, pre-existing regression from
+       elsewhere on the shared branch, not this investigation's concern.
+
+    **Final verification**: `JRubyScriptTemplateTests` now PASSES reliably -- confirmed across 19
+    repeated runs total (`found=1 succ=1 fail=0 skip=0 abort=0 status=OK`), spanning multiple
+    fresh release rebuilds (including at the final `dev`-rebased tip immediately before landing).
+    This closes the entire chained-bug investigation: 6 independent, individually real and
+    verified CratonVM correctness bugs, spanning 4 genuinely distinct subsystems -- SAM/lambda
+    array-vs-scalar dispatch (bug 1), a `filterReturnValue` no-op stub (bug 2), MethodHandle
+    trailing-array-collection gaps in `collect_trailing_varargs` shared by `dropArguments`'s
+    position bookkeeping and two array/arity shapes (bugs 3 and 4), an invokedynamic
+    bootstrap-method `Object[]`-varargs-collection gap (bug 5), and a `collectArguments` no-op
+    stub (bug 6) -- each masking the next until fixed. `MethodHandles.collectArguments` and
+    `MethodHandles.permuteArguments` are the SECOND and THIRD distinct MethodHandle combinators
+    (after `dropArguments`) found to have real implementation gaps in this file, each only
+    surfacing under complex, deeply-nested real-world composition shapes like JRuby's own
+    `invokebinder`-built call sites -- worth treating `native-builtins/src/lang_invoke.rs`'s other
+    combinators (`foldArguments`, `guardWithTest`, `filterArguments`, `insertArguments`) as
+    similarly under-exercised by existing test coverage, and worth a dedicated pass adding direct
+    nested/chained-composition unit tests for them before the next multi-hour bug hunt finds
+    another one this way.
 *   ~~Batch-context `<clinit>` contamination~~ — RETRACTED, see above (host environment issue: missing /tmp + missing ~/jdk25 symlink, not CratonVM).
+
+## 5. Combined verification (2026-07-15, post-merge sign-off)
+
+Independent, from-scratch verification of `dev` tip `22dfc55e` after all three parallel
+2026-07-15 fix sessions landed together (`ClientHttpConnectorTests` 2 fixes `91cb806c`/`3d1449a7`,
+`RequestMappingMessageConversionIntegrationTests` 5 fixes `4290124b`/`96c8a57f`/`b7a1ed84`,
+`JRubyScriptTemplateTests` 6 fixes `d8ae2b96`/`3af9ab62`/`9a6e945a`/`fc9c3a85`/`74745ee4`/`78198922`).
+Fresh worktree (`verify/final-reactive-cluster-20260715`), fresh release binary
+(`~/vmfix-finalverify-20260715`), independent of any fixing agent's own build/binary.
+
+**Good news first:**
+*   `cargo test -p cratonvm-native-builtins --lib --release`: **2999 passed / 0 failed** (top of
+    expected 2997-2999 range).
+*   `cargo test -p cratonvm-gc --lib --release`: **787 passed / 0 failed** (exact baseline match).
+*   `cargo test -p cratonvm-native-io --lib --release`: **349 passed / 0 failed** (exact baseline
+    match).
+*   `cargo test -p cratonvm-vm --lib --release`: **2197 passed / 18 failed** — all 18 are
+    pre-existing and already documented, not new: 9 are `jit::skip_list::tests::*` (unrelated
+    concurrent Hibernate-longtail session, confirmed via `git log -S` on `jit/skip_list.rs` —
+    doc's own JRuby-fix section already noted 8 of these before that session added a 9th) and 9
+    are `runtime::lock_order::tests::*`, all of which fail under plain `--release` simply because
+    lock-order enforcement is gated off by default outside debug builds (`vm/src/runtime/
+    lock_order.rs`, opt back in with `CRATONVM_LOCK_ORDER_CHECK=1`); re-ran with that env var set
+    and 8 of the 9 immediately pass, the 9th (`enforcement_active_in_debug_builds`) asserts
+    `cfg!(debug_assertions)` itself and is *designed* to fail under `--release` — not a functional
+    regression, a test/harness nuance.
+*   `JRubyScriptTemplateTests`: **12/12 clean runs** (`found=1 succ=1 fail=0`), fresh independent
+    binary — corroborates the "FULLY FIXED" claim.
+*   `RequestMappingMessageConversionIntegrationTests`: **completes in 563s** (well under the
+    documented 1200s bound) with **158/160 passing**. This is *better* than the doc's "still does
+    NOT complete" residual note — worth a doc update in section 2/4, not investigated further here
+    for time. The 2 failures are both HTTP 500s on the `[3] Reactor Netty` and `[4] Tomcat` server
+    backends (`org.springframework.web.client.HttpServerErrorException$InternalServerError`), not
+    yet root-caused.
+
+**Real finding — `cargo test --workspace --release` does not compile.** `cratonvm-jit`'s own
+`#[cfg(test)]` code fails with 11× `error[E0063]: missing field `force_native_cache` in
+initializer of `cratonvm_jit_api::CachedBytecodeMethod`` at `jit/src/lib.rs:7963,8109,8179,8633,
+8772,8883,8998,9055,9115,10319,10333`. Root cause confirmed via `git log -S'force_native_cache'`:
+commit `3d1449a7` ("perf(interp): memoize force_native_over_real_jdk_bytecode per invoke-cache
+entry", the round-2 `ClientHttpConnectorTests` fix) added the `force_native_cache: OnceLock<bool>`
+field to `CachedBytecodeMethod` in `jit-api/src/lib.rs` and correctly updated every *production*
+construction site (`vm/src/runtime/interpreter.rs`, `vm/src/runtime/vtable.rs`,
+`vm/src/jit/helpers.rs`, `vm/src/runtime/lockfree_resolve.rs`) but never touched
+`jit/src/lib.rs`, whose own unit-test fixtures build `CachedBytecodeMethod` literals directly.
+Reproduce: `cd <dev-tip-checkout> && cargo test -p cratonvm-jit --lib --release`. This means the
+`jit` crate's own unit test suite has been uncompilable on `dev` since `3d1449a7` landed, and
+nobody has been able to run it standalone since — worth a one-line follow-up fix (add
+`force_native_cache: std::sync::OnceLock::new()` at the 11 sites) but per this task's scope, not
+applied here.
+
+**Real finding — `ClientHttpConnectorTests` hangs 21/21 times (100%), not ~27%.** Ran the class
+15× under moderate host load (matching the doc's own stress-test setup) and, after confirming
+that wasn't a load artifact, 6 more times completely isolated (host load average 1.09, zero other
+CratonVM/cargo processes) — **every single one of the 21 runs timed out at 180s**, versus the
+doc's own clean 15-run measurement of 4/15 (27%) immediately after `3d1449a7` landed. Every one of
+the 21 hangs shows the identical signature on the `MockWebServer` connection-handling thread,
+seconds into the run:
+```
+ERROR [mockwebserver3.MockWebServer] MockWebServer{port=...} connection from 127.0.0.1/127.0.0.1 crashed
+java.lang.ClassCastException: java.lang.Object cannot be cast to okio.Segment
+	at okio.SegmentPool.take(SegmentPool.kt:81)
+	at okio.Buffer.writableSegment$okio(Buffer.kt:1440)
+	at okio.internal.DefaultSocket$SocketSource.read(DefaultSocket.kt:120)
+	...
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1090)
+```
+i.e. a pooled-object slot that should hold an `okio.Segment` yields a plain `Object` instead —
+classic type-confusion in a shared pool/cache, not present in the isolated `3d1449a7` verification
+(that investigation's own writeup describes a pure CPU-bound spin in
+`force_native_over_real_jdk_bytecode`/interpreter dispatch, no exception of any kind). This reads
+as a genuine "concurrent fix + concurrent fix" interaction: `3d1449a7` itself is a caching change
+to `CachedBytecodeMethod`/invoke-cache entries, landing alongside `b7a1ed84`'s own JIT
+code-range/free-list caching changes (`gc/src/arena.rs`, `jit/src/lib.rs`) from the
+`RequestMappingMessageConversionIntegrationTests` session — plausibly corrupting shared pooled-
+object bookkeeping under concurrent load, though the exact mechanism has not been root-caused here
+(out of scope — verification only). Repro: build `dev` tip `22dfc55e` release,
+`cratonvm --java-home <jdk25> --enable-native-access=ALL-UNNAMED KRun
+org.springframework.http.client.reactive.ClientHttpConnectorTests`, repeat a handful of times.
+
+**Second, related finding — `ClassCastException: java.util.concurrent.CompletableFuture cannot be
+cast to io.netty.util.concurrent.Future`.** Surfaced consistently in a 36-class representative
+slice of the reactive cluster (see below): every failing sub-test of
+`ReactorClientHttpConnectorTests` (3/5 failing, previously 5/5 OK in the 02:xx same-day baseline)
+and 5 sub-tests of `RSocketClientToServerIntegrationTests` (previously 1/12 failing, now
+12/12 — all failing) show this exact cast failure, e.g.:
+```
+RSocketClientToServerIntegrationTests :: echo() :: java.lang.AssertionError: expectation
+"expectNext(Hello 1)" failed (expected: onNext(Hello 1); actual: onError(
+java.lang.ClassCastException: java.util.concurrent.CompletableFuture cannot be cast to
+io.netty.util.concurrent.Future))
+```
+Both affected classes are Reactor-Netty-backed. Given the JRuby fix cluster's changes are all in
+MethodHandle/invokedynamic dispatch (`native-builtins/src/lang_invoke.rs`,
+`vm/src/runtime/invokedynamic.rs` — Reactor Netty's own `CompletableFuture`⇄Netty-`Future` bridging
+is lambda/MethodHandle-heavy), this is a plausible second instance of the same "combined fix
+interaction" class as the `okio.Segment` one above, but likewise not root-caused here.
+
+**Broader 36-class reactive sample** (representative slice of the 295-class sweep in section 4,
+not the same day-of exhaustive run — direct comparison confounded by the fact **most of the
+02:xx same-day baseline's EMPTY/ABEND/LOADERR/TIMEOUT statuses turned out to be caused by the
+suite driver never passing `--enable-native-access`, not real bugs** — re-running the identical
+36-class list with the flag on flips the large majority of those categories to OK, e.g.
+`DefaultWebClientTests` EMPTY→OK 25/25, `RequestMappingIntegrationTests` FAIL 20/15/5→OK 20/20,
+`WebClientIntegrationTests` TIMEOUT→completes in 12.8s with 126/170 passing,
+`RSocketServiceMethodTests` ABEND→OK 4/4). Net effect is strongly positive, but four classes look
+worse than the (imperfectly comparable) same-day baseline and are flagged for follow-up rather
+than treated as confirmed regressions given the confound above:
+*   `ReactorClientHttpConnectorTests` — was OK 5/5/0, now FAIL 5/2/3 (see `CompletableFuture`/
+    `Future` CCE above).
+*   `RSocketClientToServerIntegrationTests` — was FAIL 12/0/1, now FAIL 12/0/12 (same CCE family).
+*   `JythonScriptTemplateTests` — was OK 1/1/0, now FAIL 1/0/1,
+    `java.lang.ExceptionInInitializerError: null` (not investigated further).
+*   `WebSocketIntegrationTests` — was FAIL 72/48/24, now FAIL 72/24/48 (pass/fail ratio inverted;
+    not investigated further).
+
+**Bottom line**: the three fix sessions' own individually-claimed numbers hold up (native-builtins,
+gc, native-io unit suites clean; `JRubyScriptTemplateTests` genuinely solid;
+`RequestMappingMessageConversionIntegrationTests` now actually completes, better than documented).
+But the combined tip has at least two real, previously-undocumented defects not visible to any
+single fixing session's own isolated verification: (1) `cratonvm-jit`'s test target does not
+compile (trivial one-line-per-site fix, `3d1449a7`'s responsibility), and (2) `ClientHttpConnectorTests`
+and Reactor-Netty-backed classes generally are now hanging/failing dramatically more than the
+27% figure `3d1449a7` was verified against in isolation, with two consistent `ClassCastException`
+signatures (`okio.Segment`, `io.netty.util.concurrent.Future`) that were never observed during that
+session's own investigation. This is exactly the "concurrent fix + concurrent fix ≠ correct"
+failure mode this verification pass was commissioned to check for. **Recommend NOT treating the
+`ClientHttpConnectorTests`/reactive-connector residual as merely "diffuse throughput, 27% hang,
+accepted" going forward — re-open it as a correctness regression, not a perf residual.**
+
+
+### 5.1 Follow-up (2026-07-16): the "combined-fix regression" was refuted; real independent bug found + fixed for one of the two signatures
+
+Investigated both real findings from section 5 above with the same rigor as the original
+`3d1449a7` session. Bottom line: **neither `ClassCastException` was caused by any of the three
+2026-07-15 concurrent fix sessions.** Both are pre-existing CratonVM bugs, invisible until this
+verification pass because no prior test harness (this investigation's own, nor any of the three
+fixing sessions' own verification) had ever passed `--enable-native-access=ALL-UNNAMED` to the
+launcher — so `java.lang.foreign.MemorySegment`'s clinit always failed early with
+`IllegalCallerException`, and depending on exactly where that failure was first triggered,
+either got silently tolerated (the common case, logged as a `<clinit> failed` warning and
+ignored) or occasionally produced a hard `Class.forName` failure that aborted the whole run
+before any real test executed — masking whatever happened downstream, including both bugs below.
+
+**`okio.Segment` `ClassCastException` — root-caused and FIXED.** Reverted exactly `3d1449a7`'s
+diff from `22dfc55e` (clean `git revert`, nothing else touched), rebuilt, reran with
+`--enable-native-access=ALL-UNNAMED`: **the identical crash + 100% hang still reproduced**,
+proving `3d1449a7` innocent. Went one step further and reproduced the identical crash on
+`b5c8f43f` — the commit immediately *before* any of the three 2026-07-15 sessions touched
+anything. Root cause: `java/lang/Thread.getId()` (`native-builtins/src/lib.rs`) was hardcoded to
+return the constant `1` for every thread in the process. Okio's `SegmentPool` (okio-jvm 3.x,
+used by MockWebServer/OkHttp) shards its lock-free segment free-list across
+`HASH_BUCKET_COUNT = highestOneBit(availableProcessors()*2-1)` (16 on this host)
+`AtomicReference<Segment>` buckets via `Thread.currentThread().getId() & (HASH_BUCKET_COUNT-1)`.
+With `getId()` always `1`, every thread collapsed onto the identical bucket, concentrating the
+entire process's segment-pool churn onto one shared `AtomicReference` and exposing a race under
+that artificially extreme contention. `Thread.threadId()` (the JDK 19+ replacement, registered
+separately in `phases_late.rs`) already did this correctly via `ctx.thread_id()`; fixed the
+legacy `getId()` to match. Verified via a standalone probe: threads now get distinct real IDs.
+**Result: 100% → 0% hangs** (10/10 clean completions with `--enable-native-access=ALL-UNNAMED`,
+vs. the 21/21 hangs section 5 documented). Landed: commit `19a5025f` (also fixes the
+`cratonvm-jit` test-fixture compile break from section 5's first finding — 11 sites in
+`jit/src/lib.rs` never got `3d1449a7`'s `force_native_cache` field because that commit's sweep
+was driven by `cargo build --release` errors, which don't compile `#[cfg(test)]` code; verified
+`cargo test -p cratonvm-jit --lib`: 905/0, was: compile error).
+
+**`CompletableFuture`/`io.netty.util.concurrent.Future` `ClassCastException` — confirmed real,
+independent, NOT resolved.** With the hang eliminated, `ClientHttpConnectorTests` now completes
+cleanly every time but with `33/49` passing (was `44/49` on a lucky non-hung pre-fix run) — the
+16 failures split into 5 already-known/classpath-related (1 `NoClassDefFoundError: ByteBuddy`,
+3 `NoClassDefFoundError: AssertJ Assumptions`, 1 unrelated `IOException`) plus **11 genuinely new
+failures**, all `ClassCastException: java.util.concurrent.CompletableFuture cannot be cast to
+io.netty.util.concurrent.Future`, all on Reactor Netty sub-tests. Checked whether this also
+pre-exists: 3 clean (non-hung) runs of the true pre-everything baseline (`b5c8f43f`, also with
+`--enable-native-access=ALL-UNNAMED`) show **zero** occurrences of this failure — only the same 5
+known ones. Unlike the `okio.Segment` bug, this one does NOT clearly reproduce on the pre-session
+baseline in the samples gathered, so it cannot yet be ruled either "definitely pre-existing but
+previously masked by the hang" or "a genuine interaction surfaced by the `getId()` fix restoring
+real thread identity" — the sample size (3 clean baseline runs) is too small to be confident
+either way, and this was NOT root-caused (searched `native-builtins/src/*.rs` for any
+Netty-`Future` bridging code and found none — this looks like a bytecode/lambda-dispatch-level
+type-confusion, not a missing native override, plausibly connected to the JRuby session's
+MethodHandle/invokedynamic dispatch changes as section 5 already speculated, but not verified).
+**Flagged for dedicated follow-up, not force-fixed here** — same standard this investigation has
+applied throughout: land what's verified, document what isn't.
+
+**Current true state of `ClientHttpConnectorTests`**: 0% hangs (was 100%), 33/49 (67%) passing
+per run, consistently reproducible. A real, large improvement over the section-5 regression
+report, not yet a full fix — 11 sub-tests fail deterministically on the `CompletableFuture`/
+Netty-`Future` cast bug above.
+
+Verified (dev tip after `19a5025f`): `cargo test -p cratonvm-native-builtins --lib` 2999/0,
+`cargo test -p cratonvm-jit --lib` 905/0, `cargo test -p cratonvm-vm --lib` 2212 passed / 9
+failed (all 9 are the pre-existing `jit::skip_list::tests::*` failures section 5 already
+attributed to an unrelated concurrent Hibernate-longtail session — confirmed unchanged, not
+caused by this fix).
+
+
+### 5.2 CompletableFuture/Netty-Future `ClassCastException` — root-caused and FIXED (2026-07-16)
+
+Closes the "flagged for dedicated follow-up" item from 5.1 above.
+
+**Reproduction.** Rather than rely on JRun's own stack-trace capture (Reactor's
+`StepVerifier`/`onError` signal path does not preserve the original exception's real stack trace
+as a Java `cause` chain, only a message string — this genuinely blocked the initial investigation),
+added a temporary diagnostic directly in the interpreter's `checkcast` handler
+(`vm/src/runtime/interpreter.rs`, gated behind a new `CRATONVM_DBG_CCE_TRACE` env var, reverted
+before landing the real fix) that dumps the live call-frame stack at the exact moment a checkcast
+to a `netty`-named class fails. This immediately surfaced the real throw site:
+
+```
+[cce-trace] checkcast FAILED: obj=java.util.concurrent.CompletableFuture target=io.netty.util.concurrent.Future
+[cce-trace]   frame[108] class=io/netty/util/concurrent/AbstractEventExecutor method=submit(Ljava/lang/Runnable;)Lio/netty/util/concurrent/Future;
+[cce-trace]   frame[107] class=reactor/netty/resources/ColocatedEventLoopGroup method=<init>(Lio/netty/channel/EventLoopGroup;)V
+```
+
+`javap -c -p` on `io.netty.util.concurrent.AbstractEventExecutor` confirmed its `submit(Runnable)`
+override does `invokespecial AbstractExecutorService.submit(Runnable)` (to get the default
+implementation) then `checkcast io/netty/util/concurrent/Future` on the result. The real JDK's
+`AbstractExecutorService.submit()` internally calls `newTaskFor(runnable)` — a method
+`AbstractEventExecutor` overrides to hand back a Netty `PromiseTask` (which implements Netty's
+`Future`) instead of a plain JDK `FutureTask`.
+
+**Root cause.** `native_es_submit_runnable`/`native_es_submit_callable` (`native-builtins/src/lib.rs`)
+are registered on `ExecutorService`, `AbstractExecutorService`, and `ThreadPoolExecutor` alike, and
+unconditionally ran CratonVM's synthetic single-threaded-immediate-execution model, handing back a
+plain `CompletableFuture` via `completed_executor_future()` — regardless of whether the receiver
+was one of CratonVM's own synthetic placeholder executors or a genuinely-real bytecode object. Per
+this VM's established rule that `invokespecial` always prefers a registered native over real
+bytecode, `AbstractEventExecutor`'s `invokespecial AbstractExecutorService.submit(...)` landed on
+the synthetic native instead of the real `AbstractExecutorService.submit()` bytecode, silently
+bypassing the `newTaskFor()` override and producing a `CompletableFuture` where the caller
+immediately `checkcast`s to `io.netty.util.concurrent.Future`.
+
+This is exactly the real-vs-synthetic ambiguity `execute()`/`shutdown()` already guard against
+(`executor_has_real_workers()` + `invoke_special_bytecode_only` redispatch to real bytecode) — in
+fact `invoke_special_bytecode_only`'s own doc comment explicitly lists `submit` as part of "the
+canonical example" of natives needing this guard, but the guard was never actually applied to
+`submit()` itself, only to `execute`/`shutdown`.
+
+`executor_has_real_workers()` could not simply be reused: it disambiguates only the
+`ThreadPoolExecutor` class-name collision (CratonVM's own synthetic placeholder is deliberately
+stamped with the real `ThreadPoolExecutor` class name so field writes/native dispatch line up) via
+a per-instance `workers` field probe. Netty's `AbstractEventExecutor`/`SingleThreadEventExecutor`
+are not `ThreadPoolExecutor`s at all and have no `workers` field, so the existing check would
+misreport them as synthetic.
+
+**Fix.** Added a generalized `executor_is_real(ctx, exec)` helper: resolve the receiver's actual
+runtime class name (unwrapping the `Executors$DelegatedExecutorService`-style `e` field indirection
+first, same as before); for the ambiguous `ThreadPoolExecutor` case keep the existing `workers`
+field probe; for the bare interface markers `ExecutorService`/`ScheduledExecutorService`/`Executor`
+(used only by CratonVM's own wrapper placeholders in `phases_late.rs` — no real object's runtime
+class can ever literally be an interface) always report synthetic; any other concrete class name
+reaching this code path (Netty's classes, a real `ForkJoinPool`, a user subclass, ...) is
+necessarily real, since CratonVM never fabricates a synthetic executor under any other class name
+— confirmed by grepping every `alloc_concurrent_synthetic(ctx, "java/util/concurrent/...", ...)`
+call site in the tree. `native_es_submit_runnable`/`native_es_submit_callable` now check
+`executor_is_real()` first and, for a real receiver, redispatch via
+`invoke_special_bytecode_only("java/util/concurrent/AbstractExecutorService", "submit", ..., args)`
+— matching the `invokespecial` call site and letting the receiver's real `newTaskFor()` override
+run, exactly mirroring the established `execute()`/`shutdown()` pattern.
+
+**Verification.**
+- `ClientHttpConnectorTests`: 0 `CompletableFuture`/`Netty-Future` `ClassCastException`s across 20
+  clean runs (was 11 deterministic failures every run), 0 hangs. Pass rate 42-44/49 per run (was
+  33/49); the residual 5-7 failures per run are pre-existing and unrelated to this bug: missing
+  `bytebuddy`/`assertj` on this ad hoc harness's classpath (4-5 failures, a harness gap not a VM
+  bug), an occasional Jetty `EofException` connection-flake, an unrelated enum `valueOf()`
+  `ClassCastException` (a known separate synthetic-enum gap), and one flaky `StepVerifier`
+  exception-identity assertion.
+- `ReactorClientHttpConnectorTests` (the class 5.1 specifically named for a definitive pre/post
+  check): 5/5 across 5 clean runs, both pre- and post-rebase-to-dev-tip.
+- `RSocketClientToServerIntegrationTests`: 12/12 across 3 clean runs, both pre- and
+  post-rebase-to-dev-tip (was 1/12 in section 5's original report, then regressed further to 0/12
+  under the same `CompletableFuture`/Netty-`Future` signature — RSocket's TCP transport also
+  routes through Netty's `AbstractEventExecutor.submit()`).
+- `cargo test -p cratonvm-native-builtins --lib`: 2999/0 (unchanged).
+- `cargo test -p cratonvm-jit --lib`: 905/0 (unchanged).
+- `cargo test -p cratonvm-vm --lib`: 2197 passed / 18 failed. 9 are the pre-existing
+  `jit::skip_list::tests::*` failures already attributed (section 5) to an unrelated concurrent
+  Hibernate-longtail session. The other 9 are new `runtime::lock_order::tests::*` failures,
+  confirmed unrelated to this fix: that module (added by an unrelated concurrent commit,
+  `3dd488a9`, "env-gated runtime opt-in for lock-order enforcement in release builds") gates its
+  enforcement behind `cfg!(debug_assertions)`, and this verification pass ran `cargo test
+  --release` (debug assertions off) rather than a debug build — a pre-existing test/build-profile
+  mismatch in that unrelated module, not caused by or related to executor/native dispatch.
+
+Landed: commit `9850617b` on `dev` (rebased cleanly onto dev tip `436ec59b` before push, re-verified
+against the post-rebase binary).
+
+**Current true state of `ClientHttpConnectorTests`**: 0% hangs, 0 `CompletableFuture`/Netty-`Future`
+cast failures, 42-44/49 (86-90%) passing per run — up from 33/49 (67%) in 5.1 and the original
+21/21-hang regression in section 5. The remaining ~5-7 failures per run are all pre-existing,
+independently-tracked gaps (harness classpath completeness, an unrelated enum dispatch bug, and
+test-infra flakiness), none of them the `AbstractExecutorService`/Netty-`Future` bug this section
+closes out.
+
+
+### 5.3 Follow-up (2026-07-16): does the `getId()` fix explain the historical "diffuse throughput, 27% hang" residual? — real contributor, confirmed causally, but not the dominant cause
+
+Directly investigates whether the "27% hang rate" / diffuse hashbrown-parking_lot-mimalloc-Arc/Weak
+CPU-bound-spin residual documented under section 4 (`ClientHttpConnectorTests`, round 2, commit
+`3d1449a7`) — at the time judged a systemic "interpreter/allocator throughput ceiling," not a
+discrete bug — was actually substantially caused by the since-fixed `Thread.getId()` bug
+(`19a5025f`, section 5.1), given the mechanism (`Okio SegmentPool` collapsing every thread onto one
+shared `AtomicReference<Segment>` bucket, forcing extra CAS retries/allocations/lock traffic) looks
+exactly like the kind of diffuse cost the 27% investigation observed.
+
+**Method.** Built three binaries from a fresh `git fetch origin dev` at tip `5e13631a` (worktree
+`wt-diffuse-throughput-20260716`, `cargo build --release`, independent of any prior session's own
+binary) plus one deliberately-regressed control binary, and ran the real
+`ClientHttpConnectorTests` class (not a synthetic probe) through it directly, matching this
+effort's established methodology throughout section 5. Measured *test-completion* time (the
+`RESULT ...` line the harness prints), not process-exit time — confirmed separately that the
+process legitimately never exits on its own after the JUnit run completes (`[cratonvm] main()
+returned; VM held alive by 32 non-daemon thread(s) (JVM-spec behaviour)`), which would otherwise
+make every single run misreport as a "hang" under a naive wall-clock-to-process-exit measurement.
+
+**Current true state, reconfirmed independently: 0/60 hangs.**
+*   20 runs against the existing verified `dev`-tip binary (`wt-final-verify-20260716`, confirmed
+    functionally identical to `5e13631a` via `git diff --stat` — the only commits between its build
+    point and current tip are docs-only): **0/20 hangs**, wall times 9.5-26.1s, 44-46/49 passing
+    (one run found only 45 tests, a discovery flake, not a hang).
+*   20 runs against a from-scratch independent build (`~/vmfix-diffusethroughput-20260716`):
+    **0/20 hangs**, wall times 9.0-19.1s, 42-46/49 passing (one outlier run found only 17/49 tests
+    — a one-off test-discovery flake under this ad hoc harness, not reproduced elsewhere and not a
+    VM hang).
+*   10 rounds (20 process launches) of **two simultaneous instances** of the full 49-sub-test class
+    — deliberate added contention beyond any single prior session's own stress conditions, since the
+    original diffuse-cost investigation's own methodology explicitly ran "under moderate host load":
+    **0/20 hangs**, wall times 8.0-34.4s (only under this doubled contention does wall time approach
+    the historical 30s hang bound — never observed in any single-instance run).
+*   **Total: 60/60 clean completions across three independent stress batches, 0% hang rate** — a
+    real, fully-confirmed resolution of the 27% figure section 4 documented, corroborating (and
+    independently reproducing, with a fresh build) section 5.2's own 0/20 finding.
+
+**Hot-thread sampling: the diffuse *flavor* is still present, just no longer pathological.**
+24 live `sudo gdb -p <pid> --batch -ex 'thread apply all bt'` captures across 4 independent launches
+(identifying the CPU-hottest thread via `top -H` first, same technique as the original 41-sample
+investigation) during normal (non-hung, completing-within-10-25s) runs found leaf frames spread
+across: SIMD memcpy/memcmp/memset intrinsics, `parking_lot` lock/unlock (multiple distinct call
+sites), interpreter dispatch (`execute_invokevirtual_cached`, `nth_param_tag_byte`), `Arc` drop,
+`mimalloc` allocation (`mi_page_malloc_zero`), a classloading B-tree range lookup
+(`find_in_multi_release_archive`), and blocking syscalls (legitimate socket I/O, not spinning) —
+the same general *shape* (many small, unrelated costs, no dominant single site) as the historical
+41-sample breakdown, but every capture comes from a thread that is doing bounded, real work in a
+run that reliably finishes in seconds, not an indefinite spin. This is consistent with "diffuse
+interpreter/allocator throughput cost" remaining a genuine, still-open architectural characteristic
+of this VM — it just no longer manifests as an unbounded hang now that the discrete bugs that used
+to push individual runs over the edge are fixed.
+
+**Direct causal A/B experiment (not just correlation).** Built a fourth, deliberately-regressed
+control binary: same `dev` tip `5e13631a`, with *only* the `native-builtins/src/lib.rs`
+`Thread.getId()` registration reverted back to the pre-`19a5025f` hardcoded `Ok(Some(Value::Long(1)))`
+(everything else — the executor-`submit()` fix `9850617b`, the SATB-buffer fix `5fa116fd`, both
+blocking-region fixes, etc. — left intact). Ran the identical 20-run single-instance stress
+protocol:
+
+| Binary | n | mean wall | max wall | runs > 30s |
+|---|---|---|---|---|
+| Fixed (existing verified binary) | 20 | 15.9s | 26.1s | 0 |
+| Fixed (fresh independent build) | 20 | 13.1s | 19.1s | 0 |
+| **Control (`getId()` reverted only)** | 20 | **17.5s** | **33.4s** | **2 (10%)** |
+
+Reinstating *only* the `getId()` bug on an otherwise-fully-fixed tip measurably slows the class down
+(mean +10-25%, worst case +7-14s) and is the only one of the three batches to ever cross the 30s
+mark the original investigation used as its hang threshold — direct, reproducible, causal evidence
+that the mechanism `19a5025f`'s commit message describes (SegmentPool bucket collapse → CAS
+retry/allocation storm) is real and does contribute measurable diffuse cost, not a hypothesis.
+**However, it does not come close to reproducing the historical 27% hang rate on its own**: 0/20
+runs failed to complete within the 60s bound (vs. an expected ~5/20 if `getId()` alone explained the
+original 27% figure), and critically, **the `okio.Segment ClassCastException` from section 5.1 did
+not reproduce at all** in this control batch (`grep` for the signature across all 20 logs: zero
+matches) — even though this is the exact bug section 5.1 attributed it to. The difference: this
+control binary already has the executor-`submit()`/Netty-`Future` dispatch fix (`9850617b`)
+applied, which section 5.1's own repro conditions (tip `22dfc55e`) did not. This indicates the
+historical 100% CCE-crash regression (section 5) needed `getId()`'s collapse *compounding with*
+something else — most plausibly the missing `--enable-native-access` flag masking/reshaping which
+code paths executed at all, as section 5.1 itself already found for the crash's *visibility* — not
+`getId()` in isolation.
+
+**Conclusion.** `Thread.getId()`'s collapse was a real, now causally-confirmed contributor to this
+class's diffuse per-call contention/throughput cost — but it was never, by itself, the dominant
+cause of either the original 27% hang rate (section 4) or the later 100% CCE-crash regression
+(section 5). Both of those needed the `getId()` bug compounding with other factors: the original
+27% was measured *after* `3d1449a7`'s `force_native_over_real_jdk_bytecode` memoization already cut
+a 60% hang rate to 27% and *before* the two blocking-region fixes and the executor-`submit()` fix
+existed at all; the 100% CCE regression needed the missing `--enable-native-access` flag and the
+still-unfixed executor-`submit()` gap alongside it. The combined effect of *all* of this session's
+fixes — not `getId()` alone — is what took `ClientHttpConnectorTests` from a documented 27% hang
+rate down to a measured, reproducible, causally-stress-tested **0% (0/60)** on the current `dev`
+tip. The "diffuse hashbrown/parking_lot/mimalloc/`Arc`/`Weak` per-call cost" the section 4
+investigation catalogued is **not eliminated** — it remains visible in hot-thread sampling with the
+same general shape — but it no longer pushes any observed run past the point of actually failing to
+complete, even under deliberate 2x concurrent contention. Recommend downgrading section 4's framing
+from "closing it further needs a genuine interpreter/allocator throughput initiative" (implying an
+open reliability problem) to "a legitimate, still-open *performance* characteristic with no
+currently-observed reliability impact" — the hang symptom itself is resolved and independently
+reconfirmed, not merely reasoned about.
+
+No code change lands from this section — it is a verification/root-cause-attribution pass. The
+`control/getid-reverted-20260716` branch/worktree used for the A/B experiment is a throwaway
+(deliberately regresses a fixed bug) and is not merged.
